Many cleanups and refactorings to DataIndex code